Extend path profile to timelapses
see https://forum.image.sc/t/intensity-profiles-of-traced-dendrites-over-time/121489
While at it fix use calibrated units choice not being respected all the time